# ImageProcessing

./: .gitlab-ci.yml  CMakeLists.txt  CannyFilter.cpp  CannyFilter.h  DescriptorMatcher.cpp  DescriptorMatcher.h  DetectorOptions.cpp  DetectorOptions.h  Detectors.cpp  Detectors.h  FeatureDetector.cpp  FeatureDetector.h  FeatureRectifier.cpp  FeatureRectifier.h  FeatureTriangulator.cpp  FeatureTriangulator.h  ImageFilter.cpp  ImageFilter.h  ImageProcessingConfig.cmake.in  ImageProcessingPlugin.cpp  ImageProcessingPlugin.h  ImageRectifier.h  Matchers.cpp  Matchers.h  MatchingConstraints.cpp  MatchingConstraints.h  OpticalFlow.cpp  OpticalFlow.h  ProcessORConfig.cmake.in  README.md  initPlugin.cpp  initPlugin.h  initplugin.h
ImageProcessing_test/: CMakeLists.txt
ImageProcessing_test/camera/common/: CameraSettings_test.cpp
ImageProcessing_test/common/: DataSliderMgr_test.cpp
ImageProcessing_test/regression/: Regression_test.cpp  Regression_test.h
ProcessOR_test/camera/common/: CameraSettings_test.cpp
ProcessOR_test/common/: DataSliderMgr_test.cpp
camera/calib/: CalibExporter.cpp  CalibExporter.h  CalibLoader.cpp  CalibLoader.h  CalibrateCamera.cpp  CalibrateCamera.h  CalibrateStereo.cpp  CalibrateStereo.h  FindChessboardCorners.cpp  FindChessboardCorners.h  README.md  SolvePnP.cpp  SolvePnP.h
camera/common/: CalibratedCamera.cpp  CalibratedCamera.h  CameraSettings.cpp  CameraSettings.h  FeatureTriangulator.cpp  FeatureTriangulator.h  ImageRectifier.cpp  ImageRectifier.h  ProjectPoints.cpp  ProjectPoints.h  StereoSettings.cpp  StereoSettings.h
camera/control/: CameraController.h  CameraTrajectory.cpp  CameraTrajectory.h  Icosphere.h  LinesOfSightConstraintManager.cpp  LinesOfSightConstraintManager.h  LinesOfSightConstraintManager.inl  RenderCommunication.h  TrajectoryAround.cpp  TrajectoryAround.h  serialization.h
doc/: Doxyfile
examples/.regression/: AdaptiveThreshold.scn.ref  AddWeighted.scn.ref  CalibExporter.scn.ref  CalibLoader.scn.ref  CameraSettings.scn.ref  CannyFilter.scn.ref  ConvertTo.scn.ref  CopyTo.scn.ref  Crop.scn.ref  CvtColor.scn.ref  FeatureDetector.scn.ref  Fill.scn.ref  Flip.scn.ref  ImageMask.scn.ref  InRange.scn.ref  MinMaxLoc.scn.ref  MorphologyEx.scn.ref  PointPicker2D.scn.ref  Resize.scn.ref  Segmenter2D.scn.ref  SimpleThreshold.scn.ref  SobelFilter.scn.ref  TemplateMatcher.scn.ref  list.txt
examples/camera/calib/: CalibExporter.scn  CalibLoader.scn
examples/camera/common/: CameraSettings.scn
examples/demos/: FingerPuppet.py
examples/demos/data/: FingerPuppet.mtl
examples/features/: FeatureDetector.scn  PointPicker2D.scn  Segmenter2D.scn
examples/imgproc/: AdaptiveThreshold.scn  AddWeighted.scn  CannyFilter.scn  ConvertTo.scn  CopyTo.scn  Crop.scn  CvtColor.scn  Fill.scn  Flip.scn  ImageMask.scn  InRange.scn  MinMaxLoc.scn  MorphologyEx.scn  Resize.scn  SimpleThreshold.scn  SobelFilter.scn  TemplateMatcher.scn
features/: DescriptorMatcher.cpp  DescriptorMatcher.h  Detectors.cpp  Detectors.h  FeatureColorExtractor.cpp  FeatureColorExtractor.h  FeatureDetector.cpp  FeatureDetector.h  Matchers.cpp  Matchers.h  MatchingConstraints.cpp  MatchingConstraints.h  OpticalFlow.cpp  OpticalFlow.h  PointPicker2D.cpp  PointPicker2D.h  Segmenter2D.cpp  Segmenter2D.h
imgproc/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  AddWeighted.cpp  AddWeighted.h  CannyFilter.cpp  CannyFilter.h  ConvertTo.cpp  ConvertTo.h  ConvertTo.inl  CopyTo.cpp  CopyTo.h  Crop.cpp  Crop.h  CvtColor.cpp  CvtColor.h  Fill.cpp  Fill.h  Flip.cpp  Flip.h  ImageConverter.cpp  ImageConverter.h  InRange.cpp  InRange.h  MinMaxLoc.cpp  MinMaxLoc.h  MorphologyEx.cpp  MorphologyEx.h  Resize.cpp  Resize.h  SimpleThreshold.cpp  SimpleThreshold.h  SobelFilter.cpp  SobelFilter.h  TemplateMatcher.cpp  TemplateMatcher.h
opencv/: CMakeLists.txt  PointPicker3D.h  SofaOROpenCVConfig.cmake.in  initPlugin.cpp  initPlugin.h
opencv/calib/: CalibLoader.cpp  CalibLoader.h  CalibrateCamera.cpp  CalibrateCamera.h  CalibrateStereo.cpp  CalibrateStereo.h  CalibratedCamera.cpp  CalibratedCamera.h  CamGizmo.cpp  CamGizmo.h  CamSettings.cpp  CamSettings.h  CameraModelview.cpp  CameraModelview.h  CameraProjection.cpp  CameraProjection.h  CameraProjectionMat.cpp  CameraProjectionMat.h  CameraSettings.cpp  CameraSettings.h  ComputeRT.cpp  ComputeRT.h  FrameViewer.cpp  FrameViewer.h  SolvePnP.cpp  SolvePnP.h  StereoSettings.cpp  StereoSettings.h
opencv/core/: ImageExporter.h  ImageFilter.cpp  ImageFilter.h
opencv/core/gui/: ImageViewerDisplay.cpp  ImageViewerDisplay.h  ImageViewerModel.cpp  ImageViewerModel.h
opencv/core/gui/qml/: imagerenderer_qml.qrc
opencv/core/gui/qml/SofaWidgets/: ImageViewerWidget.qml
opencv/features/: DescriptorMatcher.cpp  DescriptorMatcher.h  Detectors.h  FeatureDetector.cpp  FeatureDetector.h  FeatureTriangulator.cpp  FeatureTriangulator.h  Matchers.cpp  MatchingConstraints.cpp  MatchingConstraints.h  OpticalFlow.h
opencv/imgproc/: AdaptiveThreshold.h  CannyFilter.h  ImageRectifier.h  MorphologyEx.h  PointPicker2D.cpp  PointPicker2D.h  Segmenter2D.cpp  Segmenter2D.h  SimpleThreshold.h  SobelFilter.cpp  SobelFilter.h
opencv/utils/: NegateVector.cpp  NegateVector.h  PointVectorConverter.cpp  PointVectorConverter.h  PointVectorConverter.inl  Vector2SSVector.cpp  Vector2SSVector.h  Vector2SSVector.inl
src/ImageProcessing/: ImageProcessingPlugin.h
src/ImageProcessing/features/: Detectors.cpp  Detectors.h  FeatureColorExtractor.h  FeatureDetector.cpp  FeatureDetector.h  (+5 more)
src/features/: FeatureColorExtractor.h  Segmenter2D.h
src/imgproc/: ConvertTo.inl  CopyTo.cpp  Crop.cpp  Resize.cpp  SimpleThreshold.cpp  SobelFilter.cpp
src/utils/: OrthoProj.cpp  Vector2SSVector.cpp  Vector2SSVector.inl
utils/: AddCam.cpp  AddCam.h  ConversionFunctor.cpp  ConversionFunctor.h  ConversionFunctor.inl  MatchPoints.cpp  MatchPoints.h  NegateVector.cpp  NegateVector.h  OrthoProj.cpp  OrthoProj.h  PointVec2Keypoint.cpp  PointVec2Keypoint.h  PointVectorConverter.cpp  PointVectorConverter.h  PointVectorConverter.inl  Vector2SSVector.cpp  Vector2SSVector.h  Vector2SSVector.inl
(+28 files in other folders)
